--- a/src/components/editor/searchPredicateModal.html
+++ b/src/components/editor/searchPredicateModal.html
@@ -72,8 +72,12 @@
     </modal-body>
 
     <modal-buttons>
+      <div class="alert alert-danger" style="display: inline; margin-right: 10px;" role="alert" ng-show="ctrl.cannotConfirm">
+        <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
+        <span>{{ctrl.cannotConfirm | translate}}</span>
+      </div>
       <button type="button" class="btn btn-default" ng-click="ctrl.close()" translate>Cancel</button>
-      <button type="button" class="btn btn-default" ng-hide="ctrl.isEditing()" ng-click="ctrl.usePredicate()" ng-disabled="!ctrl.selectedPredicate">
+      <button type="button" class="btn btn-default" ng-hide="ctrl.isEditing()" ng-click="ctrl.usePredicate()" ng-disabled="!ctrl.selectedPredicate || ctrl.cannotConfirm">
         {{(!ctrl.typeSelectable ? 'Use ' + ctrl.type : 'Use selection') | translate}}
       </button>
       <button type="button" class="btn btn-default" ng-show="ctrl.isEditing()" ng-click="ctrl.createAndUsePredicate()" ng-disabled="form.$invalid || form.$pending">
