--- a/src/app.scss
+++ b/src/app.scss
@@ -1,5 +1,25 @@
 /* app css stylesheet */
 
+// Note: ~ tells webpack to look-up the modulesDirectories
+// See also: https://github.com/jtangelder/sass-loader/issues/40
+$icon-font-path: '~bootstrap-sass/assets/fonts/bootstrap/';
+
+$gray-base:             #222;
+$gray-darker:           lighten($gray-base, 13.5%);
+$gray-dark:             lighten($gray-base, 20%);
+$gray:                  #6f6f6f;
+$gray-light:            lighten($gray-base, 60%);
+$gray-lighter:          lighten($gray-base, 93.5%);
+
+$brand-primary:         #3F51B5;
+$brand-success:         #43ac6a;
+$brand-info:            #5bc0de;
+$brand-warning:         #E99002;
+$brand-danger:          #F04124;
+
+$navbar-margin-bottom:  0 !default;
+$navbar-default-bg:     $brand-primary !default;
+
 @import './vendor/_variables';
 @import '../node_modules/bootstrap-sass/assets/stylesheets/_bootstrap';
 @import './vendor/_bootswatch';
