--- a/src/app.scss
+++ b/src/app.scss
@@ -380,6 +380,7 @@ selection-view, .main-editable-content {
 }
 
 .visualization-container {
+  display: inline-block;
   width: 100%;
   height: calc(100vh - 85px);
   overflow: hidden;
