Fix defined by filter

--- a/src/components/editor/searchClassModal.html
+++ b/src/components/editor/searchClassModal.html
@@ -24,7 +24,7 @@
           <div class="selectContainer">
             <select class="form-control" ng-model="ctrl.modelId">
               <option value="" translate>All models</option>
-              <option ng-repeat="model in ctrl.models" value="{{model.id}}">{{model | translateLabel}}</option>
+              <option ng-repeat="model in ctrl.models" value="{{model.id.uri}}">{{model | translateLabel}}</option>
             </select>
           </div>
         </div>
