--- a/src/components/editor/searchClassModal.html
+++ b/src/components/editor/searchClassModal.html
@@ -33,7 +33,7 @@
           <label><input type="checkbox" ng-model="ctrl.showExcluded">{{'Show excluded' | translate}}</label>
         </div>
 
-        <div class="checkbox">
+        <div class="checkbox" ng-hide="ctrl.onlySelection">
           <label><input type="checkbox" ng-model="ctrl.showProfiles">{{'Show classes defined in profiles' | translate}}</label>
         </div>
       </div>
