--- a/src/components/editor/classView.html
+++ b/src/components/editor/classView.html
@@ -1,7 +1,7 @@
 <form name="form" class="editable-form">
   <fieldset ng-disabled="ctrl.persisting">
     <div ng-if="ctrl.class && ctrl.model">
-      <selection-view editable-controller="ctrl">
+      <selection-view editable-controller="ctrl" show="ctrl.show">
         <selection-buttons>
           <button type="button" class="btn btn-default right" ng-click="ctrl.addProperty()" ng-show="ctrl.canModify()" translate>Add property</button>
           <export ng-hide="ctrl.isEditing()" entity="ctrl.class"></export>
@@ -11,10 +11,6 @@
         <selection-content>
           <class-form class="ctrl.editableInEdit" old-class="ctrl.class" model="ctrl.model"></class-form>
         </selection-content>
-
-        <selection-visualization>
-          <class-visualization model="ctrl.model" class="ctrl.class"></class-visualization>
-        </selection-visualization>
       </selection-view>
     </div>
   </fieldset>
