--- a/src/components/editor/selectionView.html
+++ b/src/components/editor/selectionView.html
@@ -1,40 +1,22 @@
-<div ng-class="ctrl.classForSelection()">
-  <div class="component">
-    <div class="component-header">
-      <h3>
-        <span ng-class="ctrl.editableController.getEditable().glyphIconClass"></span>
-        <span ng-hide="ctrl.show === 2">{{ctrl.editableController.getEditable() | translateLabel}}</span>
-        <span class="glyphicon glyphicon-resize-full pull-right collapsable" ng-hide="ctrl.hideVisualization || ctrl.show === 0" ng-click="ctrl.enlargeSelection()"></span>
-        <span class="glyphicon glyphicon-resize-small pull-right collapsable" ng-hide="ctrl.hideVisualization || ctrl.show === 1" ng-click="ctrl.shrinkSelection()"></span>
-      </h3>
-    </div>
-
-    <div ng-hide="ctrl.show === 2">
-      <div float="top-actions-placeholder">
-        <editable-entity-buttons editable-controller="ctrl.editableController">
-          <div ng-transclude="buttons"></div>
-        </editable-entity-buttons>
-      </div>
-
-      <div class="selection-form">
-        <div ng-transclude="content"></div>
-      </div>
-    </div>
+<div class="component">
+  <div class="component-header">
+    <h3>
+      <span ng-class="ctrl.editableController.getEditable().glyphIconClass"></span>
+      <span ng-hide="ctrl.show === 2">{{ctrl.editableController.getEditable() | translateLabel}}</span>
+      <span class="glyphicon glyphicon-resize-full pull-right collapsable" ng-hide="ctrl.show === 0" ng-click="ctrl.enlargeSelection()"></span>
+      <span class="glyphicon glyphicon-resize-small pull-right collapsable" ng-hide="ctrl.show === 1" ng-click="ctrl.shrinkSelection()"></span>
+    </h3>
   </div>
-</div>
 
-<div ng-if="!ctrl.hideVisualization" ng-class="ctrl.classForVisualization()">
-  <div class="component" top-offset="8">
-    <div class="component-header">
-      <h3>
-        <span class="glyphicon glyphicon-th"></span>
-        <span ng-hide="ctrl.show === 0" translate>Visualization</span>
-        <span class="glyphicon glyphicon-resize-full pull-right collapsable" ng-hide="ctrl.show === 2" ng-click="ctrl.enlargeVisualization()"></span>
-        <span class="glyphicon glyphicon-resize-small pull-right collapsable" ng-hide="ctrl.show === 1" ng-click="ctrl.shrinkVisualization()"></span>
-      </h3>
+  <div ng-hide="ctrl.show === 2">
+    <div float="top-actions-placeholder">
+      <editable-entity-buttons editable-controller="ctrl.editableController">
+        <div ng-transclude="buttons"></div>
+      </editable-entity-buttons>
     </div>
-    <div ng-hide="ctrl.show === 0">
-      <div ng-transclude="visualization"></div>
+
+    <div class="selection-form">
+      <div ng-transclude="content"></div>
     </div>
   </div>
 </div>
