Notify class visualization of changes
Using listener is needed because analyzing changes though watch doesn't offer enough information. Most problematic is Class/Predicate identity change.

--- a/src/components/editor/visualizationView.html
+++ b/src/components/editor/visualizationView.html
@@ -8,5 +8,5 @@
     </h3>
   </div>
 
-  <class-visualization model="ctrl.model" selection="ctrl.selection"></class-visualization>
+  <class-visualization model="ctrl.model" selection="ctrl.selection" change-notifier="ctrl.changeNotifier"></class-visualization>
 </div>
