Rename uri validation error as id

--- a/src/components/form/errorMessages.html
+++ b/src/components/form/errorMessages.html
@@ -3,7 +3,7 @@
   <ul ng-messages="ngModelController.$error" ng-messages-multiple class="errors">
     <li ng-message="url">{{'Invalid url error' | translate}}</li>
     <li ng-message="namespace">{{'Invalid namespace error' | translate}}</li>
-    <li ng-message="uri">{{'Invalid uri error' | translate}}</li>
+    <li ng-message="id">{{'Invalid id error' | translate}}</li>
     <li ng-message="existingId">{{'Existing id error' | translate}}</li>
     <li ng-message="required">{{'Required error' | translate}}</li>
     <li ng-message="requiredLocalized">{{'Required localized error' | translate}}</li>
