Use datatype input for property example

--- a/src/components/editor/propertyView.html
+++ b/src/components/editor/propertyView.html
@@ -14,7 +14,7 @@
   </editable>
 
   <editable title="Example">
-    <input id="{{ctrl.property.id + 'example'}}" class="form-control" type="text" localized-input ng-model="ctrl.property.example" />
+    <input id="{{ctrl.property.id + 'example attribute'}}" class="form-control" type="text" datatype-input="{{ctrl.property.inputType}}" ng-model="ctrl.property.example" />
   </editable>
 
   <editable title="State" value-as-localization-key="true">
