--- a/src/components/form/errorMessages.html
+++ b/src/components/form/errorMessages.html
@@ -15,21 +15,6 @@
     <li ng-message="greaterThanMax">{{'Greater than max error' | translate}}</li>
     <li ng-message="lessThanMin">{{'Less than min error' | translate}}</li>
 
-    <li ng-message="xsd:string">{{'xsd:string error' | translate}}</li>
-    <li ng-message="rdf:langString">{{'rdf:langString error' | translate}}</li>
-    <li ng-message="xsd:anyURI">{{'xsd:anyURI error' | translate}}</li>
-    <li ng-message="xsd:boolean">{{'xsd:boolean error' | translate}}</li>
-    <li ng-message="xsd:decimal">{{'xsd:decimal error' | translate}}</li>
-    <li ng-message="xsd:double">{{'xsd:double error' | translate}}</li>
-    <li ng-message="xsd:float">{{'xsd:float error' | translate}}</li>
-    <li ng-message="xsd:integer">{{'xsd:integer error' | translate}}</li>
-    <li ng-message="xsd:long">{{'xsd:long error' | translate}}</li>
-    <li ng-message="xsd:int">{{'xsd:int error' | translate}}</li>
-    <li ng-message="xsd:date">{{'xsd:date error' | translate}}</li>
-    <li ng-message="xsd:dateTime">{{'xsd:dateTime error' | translate}}</li>
-    <li ng-message="xsd:time">{{'xsd:time error' | translate}}</li>
-    <li ng-message="xsd:gYear">{{'xsd:gYear error' | translate}}</li>
-    <li ng-message="xsd:gMonth">{{'xsd:gMonth error' | translate}}</li>
-    <li ng-message="xsd:gDay">{{'xsd:gDay error' | translate}}</li>
+    <li ng-message-exp="error.key" ng-repeat="error in dynamicErrors">{{error.message | translate}} {{error.format}}</li>
   </ul>
 </div>
