--- a/src/components/model/modelForm.html
+++ b/src/components/model/modelForm.html
@@ -22,7 +22,7 @@
 
 <div class="col-md-5 col-md-offset-1">
   <references-view references="ctrl.model.references"></references-view>
-  <requires-view requires="ctrl.model.requires"></requires-view>
+  <requires-view model="ctrl.model"></requires-view>
 
   <h4 translate>Additional information</h4>
   <usage-panel entity="ctrl.model"></usage-panel>
