--- a/src/components/model/requiresView.html
+++ b/src/components/model/requiresView.html
@@ -1,9 +1,9 @@
 <h4 translate>Imported requires</h4>
 
-<p ng-if="ctrl.requires.length === 0" translate>No requires yet</p>
+<p ng-if="ctrl.model.requires.length === 0" translate>No requires yet</p>
 
 <uib-accordion>
-  <uib-accordion-group ng-repeat="require in ctrl.requires" is-open="ctrl.opened[$index]">
+  <uib-accordion-group ng-repeat="require in ctrl.model.requires" is-open="ctrl.opened[$index]">
     <uib-accordion-heading>
       <span accordion-chevron is-open="ctrl.opened[$index]">{{require | translateLabel}}</span>
     </uib-accordion-heading>
@@ -17,11 +17,11 @@
     </editable>
 
     <editable title="Namespace" disable="!require.modifiable">
-      <input type="text" class="form-control" ng-disabled="modelViewController.isRequireInUse(require)" required string-input="namespace" ng-model="require.namespace" />
+      <input type="text" class="form-control" ng-disabled="modelViewController.isRequireInUse(require)" required namespace-input model="ctrl.model" active-require="require" ng-model="require.namespace" />
     </editable>
 
     <editable title="Prefix" disable="!require.modifiable">
-      <input type="text" class="form-control" required string-input="prefix" ng-model="require.prefix" />
+      <input type="text" class="form-control" required prefix-input model="ctrl.model" active-require="require" ng-model="require.prefix" />
     </editable>
   </uib-accordion-group>
 </uib-accordion>
