--- a/src/components/model/requiresView.html
+++ b/src/components/model/requiresView.html
@@ -24,5 +24,27 @@
       <input type="text" class="form-control" required prefix-input model="ctrl.model" active-require="require" ng-model="require.prefix" />
     </editable>
   </uib-accordion-group>
+
+  <uib-accordion-group is-open="technicalOpen">
+    <uib-accordion-heading>
+      <span accordion-chevron is-open="technicalOpen">{{'Technical namespaces' | translate}}</span>
+    </uib-accordion-heading>
+
+    <table class="table table-hover">
+      <thead>
+      <tr>
+        <th translate>Prefix</th>
+        <th translate>Namespace</th>
+      </tr>
+      </thead>
+      <tbody>
+        <tr ng-repeat="(prefix, namespace) in ctrl.technicalNamespaces">
+          <td>{{prefix}}</td>
+          <td>{{namespace}}</td>
+        </tr>
+      </tbody>
+    </table>
+
+  </uib-accordion-group>
 </uib-accordion>
 
