--- a/src/components/editor/searchPredicateModal.html
+++ b/src/components/editor/searchPredicateModal.html
@@ -34,18 +34,16 @@
 
           <div class="input-group input-group-lg">
             <div class="selectContainer">
-              <select class="form-control" ng-model="ctrl.modelId">
+              <select class="form-control" ng-model="ctrl.showModel" ng-options="model | translateLabel for model in ctrl.models">
                 <option value="" translate>All models</option>
-                <option ng-repeat="model in ctrl.models" value="{{model.id.uri}}">{{model | translateLabel}}</option>
               </select>
             </div>
           </div>
 
           <div class="input-group input-group-lg" ng-if="ctrl.typeSelectable">
             <div class="selectContainer">
-              <select class="form-control" ng-model="ctrl.type">
+              <select class="form-control" ng-model="ctrl.type" ng-options="type | translate for type in ctrl.types">
                 <option value="" translate>All types</option>
-                <option ng-repeat="type in ctrl.types" value="{{type}}">{{type | translate}}</option>
               </select>
             </div>
           </div>
