--- a/src/styles/loading.scss
+++ b/src/styles/loading.scss
@@ -5,6 +5,7 @@
   margin-top: 30px !important;
 
   p {
+    font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
     color: #fff;
     font-weight: 300;
     font-size: 20px;
