IE11 autofocus fix by removing slide animation
http://stackoverflow.com/questions/25764824/strange-cursor-placement-in-modal-when-using-autofocus-in-internet-explorer
Closes #212

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -39,6 +39,11 @@ $selectionListWidth: 275px;
 $versionListWidth: 400px;
 $footer-height: 50px;
 
+.modal.fade {
+  // IE11 autofocus fix by removing slide animation
+  transition:opacity .3s linear;
+}
+
 .btn-group.right .dropdown-menu {
   right: 0;
   left: auto;
