Add header before property predicate accordion for clarification

--- a/src/components/editor/propertyView.html
+++ b/src/components/editor/propertyView.html
@@ -43,6 +43,8 @@
     </editable>
   </div>
 
+  <h4 translate>Reusable predicate</h4>
+
   <uib-accordion>
     <uib-accordion-group is-open="predicateOpen">
       <uib-accordion-heading>
