--- a/src/components/editor/searchPredicateModal.html
+++ b/src/components/editor/searchPredicateModal.html
@@ -7,18 +7,6 @@
 
     <modal-body>
 
-      <div ng-if="!ctrl.onlySelection">
-        <button type="button" class="btn btn-default btn-md pull-right" ng-click="ctrl.createNew('association')" ng-show="ctrl.isAssociationAddable()" style="margin-left: 10px">
-          <span class="glyphicon glyphicon-plus"></span>
-          {{'Create new association' | translate}}
-        </button>
-
-        <button type="button" class="btn btn-default btn-md pull-right" ng-click="ctrl.createNew('attribute')" ng-show="ctrl.isAttributeAddable()">
-          <span class="glyphicon glyphicon-plus"></span>
-          {{'Create new attribute' | translate}}
-        </button>
-      </div>
-
       <div class="row">
 
         <div class="col-md-4">
@@ -50,6 +38,14 @@
         </div>
 
         <div class="col-md-4 search-results">
+          <div class="search-result add-new" ng-show="ctrl.isAttributeAddable()" ng-click="ctrl.createNew('attribute')">
+            <h5>{{'Create new attribute' | translate}} '{{ctrl.searchText}}' <i class="glyphicon glyphicon-plus"></i></h5>
+          </div>
+
+          <div class="search-result add-new" ng-show="ctrl.isAssociationAddable()" ng-click="ctrl.createNew('association')">
+            <h5>{{'Create new association' | translate}} '{{ctrl.searchText}}' <i class="glyphicon glyphicon-plus"></i></h5>
+          </div>
+
           <search-results items="ctrl.searchResults" exclude="ctrl.exclude" on-select="ctrl.selectItem(item)">
             <i ng-class="searchResult.glyphIconClass"></i>
             <h5>{{searchResult | translateLabel}}</h5>
