--- a/src/components/editor/searchPredicateModal.html
+++ b/src/components/editor/searchPredicateModal.html
@@ -38,10 +38,10 @@
         </div>
 
         <div class="col-md-4 search-results">
-          <search-results items="ctrl.searchResults" exclude="ctrl.exclude" on-select="ctrl.selectItem(item)">
-              <i ng-class="searchResult.glyphIconClass"></i>
-              <h5>{{searchResult | translateLabel}}</h5>
-              <p>{{searchResult.definedBy | translateLabel}}</p>
+          <search-results items="ctrl.searchResults" exclude="ctrl.exclude" on-select="ctrl.selectItem(item)" edit-in-progress="ctrl.editInProgress">
+            <i ng-class="searchResult.glyphIconClass"></i>
+            <h5>{{searchResult | translateLabel}}</h5>
+            <p>{{searchResult.definedBy | translateLabel}}</p>
           </search-results>
         </div>
 
