--- a/src/components/editor/searchConceptModal.html
+++ b/src/components/editor/searchConceptModal.html
@@ -85,7 +85,7 @@
 
     <modal-buttons>
       <button type="button" class="btn btn-default" ng-click="ctrl.close()" translate>Cancel</button>
-      <button type="button" class="btn btn-default" ng-click="ctrl.confirm()" ng-disabled="!ctrl.selectedConcept">{{ctrl.buttonTitle | translate}}</button>
+      <button type="button" class="btn btn-default" ng-click="ctrl.confirm()" ng-disabled="!ctrl.selectedConcept || form.$invalid || form.$pending">{{ctrl.buttonTitle | translate}}</button>
     </modal-buttons>
 
   </modal-template>
