--- a/src/components/editor/searchPredicateModal.html
+++ b/src/components/editor/searchPredicateModal.html
@@ -38,7 +38,9 @@
         </div>
 
         <div class="col-md-4 search-results">
-          <search-results items="ctrl.searchResults" exclude="ctrl.exclude" on-select="ctrl.selectItem(item)" edit-in-progress="ctrl.editInProgress">
+          <ajax-loading-indicator ng-if="ctrl.loadingResults"></ajax-loading-indicator>
+
+          <search-results ng-if="!ctrl.loadingResults" items="ctrl.searchResults" exclude="ctrl.exclude" on-select="ctrl.selectItem(item)" edit-in-progress="ctrl.editInProgress">
             <i ng-class="searchResult.glyphIconClass"></i>
             <h5>{{searchResult | translateLabel}}</h5>
             <p>{{searchResult.definedBy | translateLabel}}</p>
