--- a/src/components/model/searchRequireModal.html
+++ b/src/components/model/searchRequireModal.html
@@ -21,7 +21,9 @@
       </div>
 
       <div class="col-md-6 search-results with-button">
-        <search-results items="ctrl.searchResults" exclude="ctrl.exclude" on-select="ctrl.selectItem(item)">
+        <ajax-loading-indicator ng-if="ctrl.loadingResults"></ajax-loading-indicator>
+
+        <search-results ng-if="!ctrl.loadingResults" items="ctrl.searchResults" exclude="ctrl.exclude" on-select="ctrl.selectItem(item)">
           <h5>{{searchResult | translateLabel}}</h5>
           <p>{{searchResult.namespace}}</p>
         </search-results>
