--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -459,6 +459,11 @@ ajax-loading-indicator {
   }
 }
 
+ajax-loading-indicator-small {
+  float: right;
+  padding-right: 10px
+}
+
 .selection-form {
   padding: 15px;
 }
